Globales css hacks y html del header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
 
 </head>
 <body>
-    
+    <header>
+        <div class="contenedor contenido-header">
+            <div class="imagen-header">
+                <picture>
+                    <source
+                        sizes="1920w" 
+                        srcset="img/header.avif 1920w" 
+                        type="image/avif">
+                    <source
+                        sizes="1920w" 
+                        srcset="img/header.webp 1920w" 
+                        type="image/webp">
+                    <source
+                        sizes="1920w" 
+                        srcset="img/header.jpg 1920w" 
+                        type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="img/header.png" lazyalt="imagen" width="1000" height="500">
+                </picture>
+            </div> <!--.imagen-header-->
+            <div class="texto-header">
+                <p class="tagline-producto">Sonido Profesionsal</p>
+                <h1 class="nombre-producto">TechPRO</h1>
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus porro recusandae tempore beatae voluptatem, nemo aliquid enim illum, quidem autem esse minus quas dolores perferendis unde laborum facere vero. Molestiae.
+                At eaque unde corporis voluptates quo inventore debitis ipsa vitae dolor ut molestiae quis in voluptatum ratione placeat corrupti, blanditiis atque rerum porro. Tempora odio aut magni vitae voluptate eum.</p>
+                <p class="precio-producto">Desde<span>$299</span></p>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
